database/force-app/default/objects/VolunteerHours__c/VolunteerHours__c.object-meta.xml
<CustomObject>
    <label>Volunteer Hours</label>
    <nameField>
        <label>Volunteer Hours Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>