database/force-app/default/objects/VolunteerHours__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Approved By (VolunteerHours)</relationshipLabel>
    <relationshipName>VolunteerHoursApprovedBy</relationshipName>
    <type>Lookup</type>
</CustomField>