database/force-app/default/objects/VolunteerHours__c/fields/Clock_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_In_Time__c</fullName>
    <label>Clock In Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>