database/force-app/default/objects/VolunteerHours__c/fields/Clock_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out_Time__c</fullName>
    <label>Clock Out Time</label>
    <type>DateTime</type>
</CustomField>