database/force-app/default/objects/VolunteerHours__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event (VolunteerHours)</relationshipLabel>
    <relationshipName>VolunteerHoursEvent</relationshipName>
    <type>Lookup</type>
</CustomField>