database/force-app/default/objects/VolunteerHours__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>